--- a/css/styles.css
+++ b/css/styles.css
@@ -84,11 +84,15 @@ a.nav-link {
   color: goldenrod;
   margin: 18px 0;
 }
+
 .hp-img1 {
   width: 85%;
+  border: 2px solid #daa520;
 }
 .hp-img2 {
   display: none;
+  border: 2px solid #daa520;
+
 }
 .col-sm-6.col-md-6.col-lg-3 p {
   color: goldenrod;
@@ -100,6 +104,8 @@ a.nav-link {
 }
 .col-sm-6.col-md-6.col-lg-3 img {
   max-width: 80%;
+  border: 2px solid #daa520;
+
 }
 .container.men {
   position: relative;
@@ -129,21 +135,21 @@ a.nav-link {
 } 
 .col-sm-6.col-md-6.col-lg-6 img {
   max-width: 65%;
-  border: 4px solid goldenrod;
+  border: 2px solid goldenrod;
 }
 .main-sb img {
   max-width: 75%;
   margin-top: 24px;
-  border: 4px solid golenrod;
+  border: 2px solid #daa520;
 }
 .main-gt img {
   max-width: 75%;
   margin-top: 24px;
-  border: 4px solid goldenrod;
+  border: 2px solid goldenrod;
 }
 .col-sm-6.col-md-6.col-lg-6.about img {
-  max-width: 65%;
-  border: 4px solid goldenrod;
+  max-width: 55%;
+  border: 2px solid goldenrod;
 }
 .contact {
   color: goldenrod;
@@ -166,9 +172,9 @@ a.nav-link {
 }
 .footer {
   position: fixed;
-  left: 0;
+  left: 20px;
   bottom: 0;
-  width: 100%;
+  width: 95%;
   background-color: transparent;
   color: darkslategrey;
   text-align: right;
@@ -179,8 +185,6 @@ a.nav-link {
   margin: 20px 0;
   justify-content: center;
 }
-
-
 
 @media only screen and (max-width: 1200px) {
   
@@ -219,7 +223,13 @@ a.nav-link {
   .main-gt img {
     max-width: 100%;
     margin-top: 24px;
-    border: 4px solid red;
+    border: 2px solid red;
+  }
+  .col-sm-6.col-md-6.col-lg-6 p {
+    font-size: 10px;
+  }
+  .footer {
+    font-size: 8px;
   }
 }
 
